--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
 		background: linear-gradient(#93B874 10%, #C9DCB9 70%, darkseagreen 90%);
 		}
-				
+			{
+			font-family: broadway;
+		}	
