--- a/style.css
+++ b/style.css
@@ -2,5 +2,5 @@ body {
 		background: linear-gradient(#93B874 10%, #C9DCB9 70%, darkseagreen 90%);
 		}
 			{
-			font-family: broadway;
+			font-family: Broadway;
 		}	
